@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - docs
+   - Automatic confluence update for 'docs/api_usage.md', 'docs/instruments.md', 'docs/run_states.md', 'docs/user_management.md'
+
 release 101.2.0 (2024-05-24)
  - remove dependency on HTML::Tidy
  - update NovaSeqX icon
